@@ -1,3 +1,7 @@
+2019-10-01  Eric Botcazou  <ebotcazou@adacore.com>
+
+	* gcc.dg/pr91854.c: New test.
+
 2019-09-28  Paul Thomas  <pault@gcc.gnu.org>
 
 	Backport from mainline
