@@ -1,3 +1,12 @@
+2019-10-01  Eric Botcazou  <ebotcazou@adacore.com>
+
+	PR target/91854
+	Backport from mainline
+	2019-09-20  Eric Botcazou  <ebotcazou@adacore.com>
+
+	PR target/91269
+	* config/sparc/sparc.h (HARD_REGNO_CALLER_SAVE_MODE): Define.
+
 2019-09-28  Oleg Endo  <olegendo@gcc.gnu.org>
 
 	Backport from mainline
